k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  annotations:
    kubectl.kubernetes.io/depends-on: '["mongo"]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: tunatio/projetdistrib-user-service:1.0
        ports:
        - containerPort: 3000
