k8s/sessions-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sessions-service
  template:
    metadata:
      labels:
        app: sessions-service
    spec:
      serviceAccountName: sessions-service-account 
      containers:
      - name: sessions-service
        image: tunatio/fitness-sessions:1.0
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: sessions-service
spec:
  selector:
    app: sessions-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
